[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[lib]
name = "todo"
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
comfy-table = "7.0.1"
dirs = "5.0.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
